Fixed the database issue
