# routes/tasks.js
@@ -1,4 +1,5 @@
 const express = require('express');
+
 const router = express.Router();
 
 const tasksController = require('../controllers/tasks');
@@ -7,10 +8,10 @@ router.get('/', tasksController.getAll);
 
 router.get('/:id', tasksController.getSingle);
 
-router.post('/', tasksController.createTasks);
+router.post('/', tasksController.createTask);
 
-router.put('/:id', tasksController.updateTasks);
+router.put('/:id', tasksController.updateTask);
 
-router.delete('/:id', tasksController.deleteTasks);
+router.delete('/:id', tasksController.deleteTask);
 
 module.exports = router;
